# backend/src/controllers/trackingController.js
@@ -1,40 +1,39 @@
 const Tracking = require("../database/models/tracking");
 const Savings = require("../database/models/savings");
+const sequelize = require("../database/controller");
 
 exports.create = async (req, res) => {
-  const { cigarettesPerDay, cost } = req.body;
-  const { user } = req;
-  try {
-    const result = await sequelize.transaction(async (t) => {
-      const existingTracking = await Tracking.findOne(
-        { where: { userId: user.id } },
-        { transaction: t }
-      );
-      if (existingTracking) {
-        throw new Error("Tracking already exists");
-      }
-      const tracking = await Tracking.create(
-        {
-          userId: user.id,
-        },
-        { transaction: t }
-      );
+  const { cigarettesPerDay, cost } = req.validatedBody;
+  const userId = req.user.id;
+  const result = await sequelize.transaction(async (t) => {
+    const existingTracking = await Tracking.findOne(
+      { where: { userId: userId } },
+      { transaction: t }
+    );
+    if (existingTracking) {
+      const error = new Error("Tracking already exists");
+      error.type = "TrackingExistsError";
+      throw error;
+    }
+    const tracking = await Tracking.create(
+      {
+        userId: userId,
+      },
+      { transaction: t }
+    );
 
-      const savings = await Savings.create(
-        {
-          trackingId: tracking.id,
-          cigarettesPerDay,
-          cost,
-        },
-        { transaction: t }
-      );
+    const savings = await Savings.create(
+      {
+        trackingId: tracking.id,
+        cigarettesPerDay,
+        cost,
+      },
+      { transaction: t }
+    );
 
-      return { ...tracking.get(), savings: savings.get() };
-    });
-    res.status(201).send(result);
-  } catch (error) {
-    res.status(500).send({ message: error.message });
-  }
+    return { ...tracking.get(), savings: savings.get() };
+  });
+  res.status(201).send(result);
 };
 
 exports.get = async (req, res) => {
